--- a/Superheroes/Gemfile
+++ b/Superheroes/Gemfile
@@ -7,10 +7,13 @@ end
 
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
-gem 'rails', '~> 5.0.4'
+gem 'rails', '~> 5.0.3'
 # Use sqlite3 as the database for Active Record
-gem 'sqlite3'
-# Use Puma as the app server
+gem 'sqlite3', group: :development
+#gem añadidas y modificadas
+gem 'pg', group: :production
+gem 'rails_12factor', group: :production
+
 gem 'puma', '~> 3.0'
 # Use SCSS for stylesheets
 gem 'sass-rails', '~> 5.0'
